Se crea el form de usuarios. Se agrega knp_paginator.

--- a/src/UbicacionBundle/Resources/config/routing.yml
+++ b/src/UbicacionBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+ubicacion_localidad:
+    resource: "@UbicacionBundle/Resources/config/routing/localidad.yml"
+    prefix:   /localidad
+
 ubicacion_homepage:
     path:     /hello/{name}
     defaults: { _controller: UbicacionBundle:Default:index }
