--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -36,6 +36,10 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    form:
+        resources:
+            - 'bootstrap_3_layout.html.twig'
+            - 'UtilBundle:Form:fields.html.twig'
 
 # Assetic Configuration
 assetic:
@@ -80,8 +84,30 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+#doctrine extentions
+stof_doctrine_extensions:
+    default_locale: %locale%
+    translation_fallback: true
+    orm:
+        default:
+            translatable: true
+            timestampable: true
+            blameable: true
+
 #fos user
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: UsuariosBundle\Entity\Usuario
+
+#KNPpaginator
+knp_paginator:
+    page_range: 5                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: direction # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: ThemeBundle:Default:sliding.html.twig     # sliding pagination controls template
+        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
