Se corrige pantalla inicial

--- a/src/BalotajeBundle/Resources/config/routing.yml
+++ b/src/BalotajeBundle/Resources/config/routing.yml
@@ -3,5 +3,5 @@ balotaje_mesas:
     prefix:   /mesas
 
 resultados:
-    path:     /resultados
+    path:     /
     defaults: { _controller: "BalotajeBundle:Default:index" }
