--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,6 @@
 app:
     resource: "@AppBundle/Resources/config/routing.yml"
-    prefix:   /
+    prefix:   /app
 
 theme:
     resource: "@ThemeBundle/Resources/config/routing.yml"
@@ -20,7 +20,7 @@ usuarios:
 
 balotaje:
     resource: "@BalotajeBundle/Resources/config/routing.yml"
-    prefix:   /balotaje
+    prefix:   /
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
