--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,7 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
+                default_target_path: app_homepage
                 csrf_provider: security.csrf.token_manager # Use form.csrf_provider instead for Symfony <2.4
 
             logout:       true
