Se agrega la opcion de exportar a excel los resultados.

--- a/src/BalotajeBundle/Resources/config/routing/mesa.yml
+++ b/src/BalotajeBundle/Resources/config/routing/mesa.yml
@@ -28,3 +28,7 @@ mesas_delete:
     path:     /{id}/delete
     defaults: { _controller: "BalotajeBundle:Mesa:delete" }
     methods:  [POST, DELETE]
+
+exportar_resultados:
+    path: /exportar_resultados
+    defaults: { _controller: "BalotajeBundle:Mesa:exporarResultados" }
